--- a/content/data/pageData.yaml
+++ b/content/data/pageData.yaml
@@ -1,2 +1,2 @@
 - welcomeText : WE ARE BLAZERA
-  landingText : We work towards providing innovative solutions to emergency responders through Information Control Technology
+  landingText : We work towards providing innovative solutions to emergency responders
