--- a/content/data/services.yaml
+++ b/content/data/services.yaml
@@ -1,8 +1,12 @@
-- title: Branding
+- title: Dynamic Mapping Tool
   src: https://image.flaticon.com/icons/svg/65/65508.svg
-- title: Design
+  description: A tool that allows the user to input lines, shapes and coordinates that can be seen by other team members.
+- title: Integrated Information
   src: https://image.flaticon.com/icons/svg/86/86998.svg
-- title: Development
+  description: Information critical to the area of operation will be integrated with the mapping tool in near-real time. 
+- title: Core Processing
   src: https://image.flaticon.com/icons/svg/69/69045.svg
-- title: Illustration
+  description: Access to the core Blazera system that will help teams find and manage information and provide complex modelling solutions to be displayed on the application. 
+- title: Coordinated Response
   src: https://image.flaticon.com/icons/svg/45/45954.svg
+  description: Functionality to plan and communicate between many teams, to enable a faster and coordinated response.
