--- a/content/data/team.yaml
+++ b/content/data/team.yaml
@@ -1,10 +1,20 @@
 - name : Andrea
-  img : https://avatars2.githubusercontent.com/u/71047?s=460&v=4
+  img : andrea.jpg
+  description: A very nice and short description of every one of us
+  linkedin: https://linkedin.com/in/copadojesus/
 - name : Asa
-  img : https://avatars0.githubusercontent.com/u/191758?s=460&v=4
+  img : asa.jpg
+  description: A very nice and short description of every one of us
+  linkedin: https://linkedin.com/in/copadojesus/
 - name : Jesús
-  img : https://avatars3.githubusercontent.com/u/1120926?s=460&v=4
+  img : jesus.jpg
+  description: A very nice and short description of every one of us
+  linkedin: https://linkedin.com/in/copadojesus/
 - name : Teddy
-  img : https://avatars3.githubusercontent.com/u/1120926?s=460&v=4
+  img : teddy.jpeg
+  description: A very nice and short description of every one of us
+  linkedin: https://linkedin.com/in/copadojesus/
 - name : Shaun
-  img : https://avatars3.githubusercontent.com/u/1120926?s=460&v=4
+  img : shaun.jpg
+  description: A very nice and short description of every one of us
+  linkedin: https://linkedin.com/in/copadojesus/
