Service description updated

--- a/content/data/services.yaml
+++ b/content/data/services.yaml
@@ -6,7 +6,7 @@
   description: Information critical to the area of operation will be integrated with the mapping tool in near-real time. 
 - title: Core Processing
   src: https://image.flaticon.com/icons/svg/69/69045.svg
-  description: Access to the core Blazera system that will help teams find and manage information and provide complex modelling solutions to be displayed on the application. 
+  description: Access to the Blazera core that will help teams find and manage information and provide complex modelling solutions. 
 - title: Coordinated Response
   src: https://image.flaticon.com/icons/svg/45/45954.svg
   description: Functionality to plan and communicate between many teams, to enable a faster and coordinated response.
