Descriptions and LinkedIn urls updated

--- a/content/data/team.yaml
+++ b/content/data/team.yaml
@@ -1,20 +1,20 @@
 - name : Andrea
   img : andrea.jpg
-  description: A very nice and short description of every one of us
-  linkedin: https://linkedin.com/in/copadojesus/
+  description: Telecommunication systems expert with a design touch. Alert to performance and usability.
+  linkedin: https://linkedin.com/in/cappelloandrea/
 - name : Asa
   img : asa.jpg
-  description: A very nice and short description of every one of us
-  linkedin: https://linkedin.com/in/copadojesus/
+  description: DevOps and cloud innovator with a passion for terminals.
+  linkedin: https://linkedin.com/in/asawari-joshi-018634b6/
 - name : Jesús
   img : jesus.jpg
-  description: A very nice and short description of every one of us
+  description: Software Engineer and Artificial Intelligence enthusiast. 
   linkedin: https://linkedin.com/in/copadojesus/
 - name : Teddy
   img : teddy.jpeg
-  description: A very nice and short description of every one of us
-  linkedin: https://linkedin.com/in/copadojesus/
+  description: Business Developer, quick to adapt to new circumstance and an active presenter.
+  linkedin: https://linkedin.com/in/duyteddytran/
 - name : Shaun
   img : shaun.jpg
   description: A very nice and short description of every one of us
-  linkedin: https://linkedin.com/in/copadojesus/
+  linkedin: https://linkedin.com/in/shaun-mcnaughton
