--- a/content/data/services.yaml
+++ b/content/data/services.yaml
@@ -1,12 +1,12 @@
 - title: Dynamic Mapping Tool
-  src: https://image.flaticon.com/icons/svg/65/65508.svg
+  src: input.png
   description: A tool that allows the user to input lines, shapes and coordinates that can be seen by other team members.
 - title: Integrated Information
-  src: https://image.flaticon.com/icons/svg/86/86998.svg
+  src: integrated-information.png
   description: Information critical to the area of operation will be integrated with the mapping tool in near-real time. 
 - title: Core Processing
-  src: https://image.flaticon.com/icons/svg/69/69045.svg
+  src: blazera-core.png
   description: Access to the Blazera core that will help teams find and manage information and provide complex modelling solutions. 
 - title: Coordinated Response
-  src: https://image.flaticon.com/icons/svg/45/45954.svg
+  src: coordination.png
   description: Functionality to plan and communicate between many teams, to enable a faster and coordinated response.
