--- a/content/data/team.yaml
+++ b/content/data/team.yaml
@@ -8,13 +8,13 @@
   linkedin: https://linkedin.com/in/asawari-joshi-018634b6/
 - name : Jesús
   img : jesus.jpg
-  description: Software Engineer and Artificial Intelligence enthusiast. 
+  description: Software engineer and artificial intelligence enthusiast. 
   linkedin: https://linkedin.com/in/copadojesus/
 - name : Teddy
   img : teddy.jpeg
-  description: Business Developer, quick to adapt to new circumstance and an active presenter.
+  description: Business developer, quick to adapt to new circumstance and an active presenter.
   linkedin: https://linkedin.com/in/duyteddytran/
 - name : Shaun
   img : shaun.jpg
-  description: A very nice and short description of every one of us
+  description: Data analyst who likes data driven outcomes.
   linkedin: https://linkedin.com/in/shaun-mcnaughton
